[gd_scene load_steps=14 format=3 uid="uid://bpe7nxei1b4io"]

[ext_resource type="Script" path="res://scripts/hammer_enemy.gd" id="1_eiica"]
[ext_resource type="Texture2D" uid="uid://dh7u84roilo5v" path="res://assets/sprites/hammer_robot.png" id="3_ncpvr"]
[ext_resource type="Script" path="res://scripts/instant_kill.gd" id="3_r5u2m"]
[ext_resource type="Script" path="res://assets/sprites/hammer_hit.gd" id="4_qknw7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qn8ap"]
atlas = ExtResource("3_ncpvr")
region = Rect2(1005, 0, 1005, 1005)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5oq4"]
atlas = ExtResource("3_ncpvr")
region = Rect2(0, 1005, 1005, 1005)

[sub_resource type="AtlasTexture" id="AtlasTexture_58brr"]
atlas = ExtResource("3_ncpvr")
region = Rect2(1005, 1005, 1005, 1005)

[sub_resource type="AtlasTexture" id="AtlasTexture_utxd8"]
atlas = ExtResource("3_ncpvr")
region = Rect2(0, 0, 1005, 1005)

[sub_resource type="SpriteFrames" id="SpriteFrames_y1c37"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn8ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5oq4")
}],
"loop": true,
"name": &"AttackBegin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58brr")
}],
"loop": true,
"name": &"AttackBeginMagnifier",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utxd8")
}],
"loop": true,
"name": &"AttackExecuted",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo7y6"]
size = Vector2(44, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fb4h"]
size = Vector2(210.639, 254.473)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1l4t"]
size = Vector2(385.77, 459.967)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfcwb"]
size = Vector2(183.835, 217.06)

[node name="hammer_enemy" type="Node2D"]
position = Vector2(56, 62)
script = ExtResource("1_eiica")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(50, 30)
scale = Vector2(0.123434, 0.12968)
sprite_frames = SubResource("SpriteFrames_y1c37")
animation = &"AttackExecuted"

[node name="InstantKill" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(-194.436, 69.4016)
scale = Vector2(8.10149, 7.71129)
collision_mask = 2
script = ExtResource("3_r5u2m")
metadata/_edit_group_ = true

[node name="BodyCollisionShape" type="CollisionShape2D" parent="AnimatedSprite2D/InstantKill"]
position = Vector2(-3.8147e-06, -1)
shape = SubResource("RectangleShape2D_lo7y6")

[node name="Hammer" type="Area2D" parent="AnimatedSprite2D"]

[node name="smallHammerCollisionShape" type="CollisionShape2D" parent="AnimatedSprite2D/Hammer"]
position = Vector2(324.06, -312.308)
shape = SubResource("RectangleShape2D_6fb4h")

[node name="bigHammerCollisionShape" type="CollisionShape2D" parent="AnimatedSprite2D/Hammer"]
position = Vector2(252.697, -268.54)
shape = SubResource("RectangleShape2D_x1l4t")
disabled = true

[node name="HammerHit" type="Area2D" parent="AnimatedSprite2D"]
collision_mask = 2
script = ExtResource("4_qknw7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/HammerHit"]
position = Vector2(-313.157, 300.74)
scale = Vector2(0.999999, 1)
shape = SubResource("RectangleShape2D_xfcwb")
disabled = true

[node name="TimerBeginToFall" type="Timer" parent="."]
one_shot = true

[node name="TimerFalling" type="Timer" parent="."]
wait_time = 1.2

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackDoneTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="AnimatedSprite2D/InstantKill" to="AnimatedSprite2D/InstantKill" method="_on_body_entered"]
[connection signal="input_event" from="AnimatedSprite2D/Hammer" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="AnimatedSprite2D/Hammer" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="AnimatedSprite2D/Hammer" to="." method="_on_area_2d_mouse_exited"]
[connection signal="body_entered" from="AnimatedSprite2D/HammerHit" to="AnimatedSprite2D/HammerHit" method="_on_body_entered"]
[connection signal="timeout" from="TimerBeginToFall" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerFalling" to="." method="_on_timer_falling_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackDoneTimer" to="." method="_on_attack_done_time_timeout"]
